--- a/.github/workflows/deploy-project.yml
+++ b/.github/workflows/deploy-project.yml
@@ -44,6 +44,8 @@ jobs:
           script: |
             echo ${{secrets.GITHUB_TOKEN}} | docker login ghcr.io -u ${{github.actor}} --password-stdin
             cd ./Product-DevOps
+            docker stop backend && docker rm backend
+            docker image rm ghcr.io/int222-09-17-78/backend:1.0.0
             docker-compose up --build -d
            
 #test
