--- a/.github/workflows/deploy-project.yml
+++ b/.github/workflows/deploy-project.yml
@@ -47,6 +47,7 @@ jobs:
             docker stop backend && docker rm backend
             docker image rm ghcr.io/int222-09-17-78/backend:1.0.0
             docker-compose up --build -d
+            docker image prune -af
            
 #test
 # az acr login -n suesiRegistry
