--- a/.github/workflows/deploy-project.yml
+++ b/.github/workflows/deploy-project.yml
@@ -44,13 +44,11 @@ jobs:
           script: |
             echo ${{secrets.GITHUB_TOKEN}} | docker login ghcr.io -u ${{github.actor}} --password-stdin
             cd ./Product-DevOps
-            
+            docker stop backend && docker rm backend
+            docker image rm ghcr.io/int222-09-17-78/backend:1.0.0
             docker-compose up --build -d   
-            
-       
-# docker stop backend && docker rm backend
-# docker image rm ghcr.io/int222-09-17-78/backend:1.0.0   
-# docker image prune -af         
+            docker image prune -af
+           
 #test
 # az acr login -n suesiRegistry
             
